tests/error/function_used.gw
int i;
function void i(){}
